Added column count

--- a/tables/metric_groups.yml
+++ b/tables/metric_groups.yml
@@ -1,7 +1,6 @@
 table_name: customer
 metric_groups:
     - all
-# columns:
-#   size:
-#     metric_groups:
-#       - all
+columns:
+  countrycode:
+    
