Added duplicate count

--- a/tables/consistency_over_time_by_groups.yml
+++ b/tables/consistency_over_time_by_groups.yml
@@ -1,9 +1,10 @@
+#NOT WORKING
 table_name: hospitals
 sql_metrics:
     - sql: |
               SELECT hospital, sum(ClaimAmount) as total_amount
               FROM hospitals
               GROUP BY hospital;
-      
+
       tests:
         - total_amount < 5000
